<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/bg_white"
    tools:context=".MainActivity">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:fitsSystemWindows="true" android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorGreen" >
            <!--编辑框-->
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="#29a50b">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_mall_search" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:hint="买一送一"
                    android:textCursorDrawable="@drawable/shape_shop_cursor"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="13dp"/>
            </LinearLayout>
        </RelativeLayout>

        <!--轮播图片-->

        <com.youth.banner.Banner
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/banner"
            android:layout_below="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:image_scale_type="center_crop" />


        <!--四个小导航-->
        <LinearLayout
            android:id="@+id/small_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/banner"
            android:layout_marginTop="10dp">
            <!--瓜类-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/melonwater"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="瓜类"
                    android:textColor="#999999"
                    android:textSize="16dp" />
            </LinearLayout>
            <!--果类-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/apple"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="苹果"
                    android:textColor="#999999"
                    android:textSize="16dp" />
            </LinearLayout>
            <!--橙子-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ju"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="橙子"
                    android:textColor="#999999"
                    android:textSize="16dp" />
            </LinearLayout>
            <!--其他-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/niu"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="7dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="其他"
                    android:textColor="#999999"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>

        <!--卡片-->
        <LinearLayout android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:padding="10dp"
            android:layout_below="@+id/small_navigation">
            <!--卡片1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_backgroundColor"
                android:layout_weight="1"
                android:layout_marginRight="10dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView android:id="@+id/come"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardOne_1"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="12dp"/>
                    <TextView
                        android:layout_below="@+id/come"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardOne_2"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_below="@+id/come"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_marginLeft="18dp"
                        android:src="@drawable/sign_in"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>
            </LinearLayout>
            <!--卡片2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_backgroundColor"
                android:layout_marginLeft="10dp"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView android:id="@+id/get_Grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardTwo_1"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="12dp"/>
                    <TextView
                        android:layout_below="@+id/get_Grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardTwo_2"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_below="@+id/come"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_marginLeft="18dp"
                        android:src="@drawable/gift"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <!--果园热卖-->
        <RelativeLayout
            android:id="@+id/hot_sell"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/card">
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/hot_sell"
                android:textSize="20sp" />
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="#bfbfbf"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
        <!--卖水果卖水果，卖一个橘子先-->
        <RelativeLayout
            android:id="@+id/sellFruit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hot_sell"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/orangeImg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/sellorange" />
            <TextView
                android:id="@+id/orangeIntroduce"
                android:layout_toRightOf="@+id/orangeImg"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/orangeIntroduce"
                android:textColor="@color/fruitIntroduce"/>
            <TextView
                android:id="@+id/orangeName"
                android:layout_below="@+id/orangeIntroduce"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@+id/orangeIntroduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/orangeIntroduce_name"
                android:textColor="@color/fruitName"/>
            <TextView
                android:id="@+id/orangePrice"
                android:layout_below="@+id/orangeName"
                android:layout_marginTop="6dp"
                android:layout_alignLeft="@+id/orangeIntroduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/orangeIntroduce_price"
                android:textColor="@color/fruitPrice"/>
        </RelativeLayout>
        <!--卖苹果-->
        <RelativeLayout
            android:id="@+id/sellFruit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sellFruit1"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/appleImg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/sellapple"/>
            <TextView
                android:id="@+id/appleIntroduce"
                android:layout_toRightOf="@+id/appleImg"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/appleIntroduce"
                android:textColor="@color/fruitIntroduce"/>
            <TextView
                android:id="@+id/appleName"
                android:layout_below="@+id/appleIntroduce"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@+id/appleIntroduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/appleIntroduce_name"
                android:textColor="@color/fruitName"/>
            <TextView
                android:id="@+id/applePrice"
                android:layout_below="@+id/appleName"
                android:layout_marginTop="2dp"
                android:layout_alignLeft="@+id/appleIntroduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/appleIntroduce_price"
                android:textColor="@color/fruitPrice"/>
        </RelativeLayout>
    </RelativeLayout>


</ScrollView>



